--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Ignacio Vaquero
-  description: DevOps Engineer
+  description: This role installs Docker on Raspbian operating systems following the official procedure
   company: ING
   license: BSD
   min_ansible_version: 2.7
